--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
           <h3>World Recognition</h3>
           <p>Vajrastras warriors hold Guinness, Nobel, and Graham Bell World Records — legends in motion.</p>
         </div>    
-      </div>
+      </div><br>
 
       <h2 class="section-title">Trophy Gallery</h2>
       <div class="trophy-gallery">
@@ -871,3 +871,4 @@
   </script>
 </body>
 </html>
+
