--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           grid-template-columns: 1fr;
         }
         #msme-img {
-          display: none;
+          display: block;
         }
         .section-title {
           font-size: 1.9rem;
@@ -871,3 +871,4 @@
   </script>
 </body>
 </html>
+
